dark mode button fixed in mobile view

--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -429,7 +429,7 @@
   -ms-user-select: none; 
   transition: .25s;
   @media only screen and (max-width: 800px) {
-    left: 11px;
+    left: 10px;
     bottom: 7px; 
   }
 }
@@ -444,6 +444,6 @@
   right: 25px;
   color: rgb(255, 255, 255);
   @media only screen and (max-width: 800px) {
-    right: 11px;
+    right: 10px;
   }
 }
